--- a/studying.ipynb
+++ b/studying.ipynb
@@ -2,89 +2,143 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from authenticate import authenticate_google_calendar "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "def fetch_study_events(service, calendar_id=\"primary\"):\n",
+    "    now = datetime.datetime.utcnow().isoformat() + \"Z\"  # 'Z' indicates UTC time\n",
+    "    # Calculate the start of the month\n",
+    "    start_of_month = (\n",
+    "        datetime.datetime.utcnow().replace(day=1) - datetime.timedelta(days=1)\n",
+    "    ).replace(day=1).isoformat() + \"Z\"\n",
+    "    print(\"Fetching past month events\")\n",
+    "    events_result = (\n",
+    "        service.events()\n",
+    "        .list(\n",
+    "            calendarId=calendar_id,\n",
+    "            timeMin=start_of_month,\n",
+    "            timeMax=now,\n",
+    "            maxResults=100,\n",
+    "            singleEvents=True,\n",
+    "            orderBy=\"startTime\",\n",
+    "        )\n",
+    "        .execute()\n",
+    "    )\n",
+    "    events = events_result.get(\"items\", [])\n",
+    "\n",
+    "    if not events:\n",
+    "        print(\"No past month events found.\")\n",
+    "        return []\n",
+    "\n",
+    "    for event in events:\n",
+    "        start = event[\"start\"].get(\"dateTime\", event[\"start\"].get(\"date\"))\n",
+    "        print(start, event[\"summary\"])\n",
+    "\n",
+    "    return events\n",
+    "\n",
+    "\n",
+    "def study_stats(events):\n",
+    "    total_study_time = 0\n",
+    "    for event in events:\n",
+    "        start = datetime.datetime.fromisoformat(\n",
+    "            event[\"start\"].get(\"dateTime\", event[\"start\"].get(\"date\"))\n",
+    "        )\n",
+    "        end = datetime.datetime.fromisoformat(\n",
+    "            event[\"end\"].get(\"dateTime\", event[\"end\"].get(\"date\"))\n",
+    "        )\n",
+    "        duration = (end - start).total_seconds() / 3600  # Convert to hours\n",
+    "        total_study_time += duration\n",
+    "    print(f\"Total study time: {total_study_time} hours\")\n",
+    "\n",
+    "\n",
+    "def create_study_plan(service, subjects, calendar_id=\"primary\"):\n",
+    "    \n",
+    "    def delete_overlapping_events(start_time, end_time):\n",
+    "        \"\"\"Deletes events in the study plan that overlap with the given time range.\"\"\"\n",
+    "        events_result = service.events().list(\n",
+    "            calendarId=calendar_id, \n",
+    "            timeMin=start_time.isoformat(),\n",
+    "            timeMax=end_time.isoformat(), \n",
+    "            singleEvents=True,\n",
+    "            orderBy='startTime'\n",
+    "        ).execute()\n",
+    "        events = events_result.get('items', [])\n",
+    "\n",
+    "        for event in events:\n",
+    "            if 'summary' in event and event['summary'] in subjects:\n",
+    "                service.events().delete(calendarId=calendar_id, eventId=event['id']).execute()\n",
+    "                print(f\"Deleted overlapping event: {event['summary']} from {event['start']['dateTime']} to {event['end']['dateTime']}.\")\n",
+    "\n",
+    "    now = datetime.datetime.now(datetime.timezone.utc)\n",
+    "    current_date = now.date()\n",
+    "    study_dates = [current_date, current_date + datetime.timedelta(days=1)]\n",
+    "    total_weight = sum(subjects.values())\n",
+    "\n",
+    "    for study_date in study_dates:\n",
+    "        if study_date == current_date and now.time() > datetime.time(9, 0):\n",
+    "            start_time = max(now, datetime.datetime.combine(study_date, datetime.time(9, 0), tzinfo=datetime.timezone.utc))\n",
+    "        else:\n",
+    "            start_time = datetime.datetime.combine(study_date, datetime.time(9, 0), tzinfo=datetime.timezone.utc)\n",
+    "\n",
+    "        end_time = datetime.datetime.combine(study_date, datetime.time(17, 0), tzinfo=datetime.timezone.utc)\n",
+    "        lunch_start = datetime.datetime.combine(study_date, datetime.time(12, 0), tzinfo=datetime.timezone.utc)\n",
+    "        lunch_end = lunch_start + datetime.timedelta(hours=1)\n",
+    "\n",
+    "        # Delete overlapping events in the study plan\n",
+    "        delete_overlapping_events(start_time, end_time)\n",
+    "\n",
+    "        while start_time < end_time:\n",
+    "            if lunch_start <= start_time < lunch_end:\n",
+    "                start_time = lunch_end  # Skip lunch hour\n",
+    "                continue\n",
+    "\n",
+    "            for subject, weight in subjects.items():\n",
+    "                study_duration = datetime.timedelta(minutes=40 * weight / total_weight)\n",
+    "                gap_duration = datetime.timedelta(minutes=5)\n",
+    "\n",
+    "                event_end = start_time + study_duration\n",
+    "                if event_end > end_time or (lunch_start <= event_end < lunch_end):\n",
+    "                    break  # Skip to the next subject if the event would end outside of study hours or during lunch\n",
+    "\n",
+    "                event = {\n",
+    "                    \"summary\": subject,\n",
+    "                    \"start\": {\n",
+    "                        \"dateTime\": start_time.isoformat(),\n",
+    "                        \"timeZone\": \"UTC\",\n",
+    "                    },\n",
+    "                    \"end\": {\n",
+    "                        \"dateTime\": event_end.isoformat(),\n",
+    "                        \"timeZone\": \"UTC\",\n",
+    "                    },\n",
+    "                }\n",
+    "                service.events().insert(calendarId=calendar_id, body=event).execute()\n",
+    "                print(f\"Added {subject} study block from {start_time} to {event_end}.\")\n",
+    "\n",
+    "                start_time = event_end + gap_duration  # Next event starts after a gap\n",
+    "\n",
+    "            if start_time >= end_time:\n",
+    "                break  # If the day's study time is over, exit the loop"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from __future__ import print_function\n",
-    "import datetime\n",
-    "import os.path\n",
-    "from google.auth.transport.requests import Request\n",
-    "from google.oauth2.credentials import Credentials\n",
-    "from google_auth_oauthlib.flow import InstalledAppFlow\n",
-    "from googleapiclient.discovery import build\n",
-    "import json\n",
-    "\n",
-    "# If modifying these scopes, delete the file token.json.\n",
-    "SCOPES = ['https://www.googleapis.com/auth/calendar.readonly']\n",
-    "\n",
-    "def authenticate_google_calendar():\n",
-    "    \"\"\"\n",
-    "    Authenticate and create a Google Calendar API service.\n",
-    "    \"\"\"\n",
-    "    creds = None\n",
-    "    # The file token.json stores the user's access and refresh tokens.\n",
-    "    if os.path.exists('token.json'):\n",
-    "        creds = Credentials.from_authorized_user_file('token.json', SCOPES)\n",
-    "    # If there are no (valid) credentials available, let the user log in.\n",
-    "    if not creds or not creds.valid:\n",
-    "        if creds and creds.expired and creds.refresh_token:\n",
-    "            creds.refresh(Request())\n",
-    "        else:\n",
-    "            flow = InstalledAppFlow.from_client_secrets_file(\n",
-    "                'credentials.json', SCOPES)\n",
-    "            creds = flow.run_local_server(port=0)\n",
-    "        # Save the credentials for the next run\n",
-    "        with open('token.json', 'w') as token:\n",
-    "            token.write(creds.to_json())\n",
-    "\n",
-    "    service = build('calendar', 'v3', credentials=creds)\n",
-    "    return service\n",
-    "\n",
-    "def fetch_study_events(service, calendar_id='primary'):\n",
-    "    \"\"\"\n",
-    "    Fetches study events from a given calendar.\n",
-    "    \"\"\"\n",
-    "    now = datetime.datetime.utcnow().isoformat() + 'Z' # 'Z' indicates UTC time\n",
-    "    print('Fetching the upcoming 10 events')\n",
-    "    events_result = service.events().list(calendarId=calendar_id, timeMin=now,\n",
-    "                                          maxResults=10, singleEvents=True,\n",
-    "                                          orderBy='startTime').execute()\n",
-    "    events = events_result.get('items', [])\n",
-    "\n",
-    "    if not events:\n",
-    "        print('No upcoming events found.')\n",
-    "        return []\n",
-    "\n",
-    "    for event in events:\n",
-    "        start = event['start'].get('dateTime', event['start'].get('date'))\n",
-    "        print(start, event['summary'])\n",
-    "\n",
-    "    return events\n",
-    "\n",
-    "def calculate_study_stats(events):\n",
-    "    \"\"\"\n",
-    "    Calculate total study time and other stats from events.\n",
-    "    \"\"\"\n",
-    "    total_study_time = 0\n",
-    "    # Example calculation, adapt according to event structure\n",
-    "    for event in events:\n",
-    "        start = datetime.datetime.fromisoformat(event['start'].get('dateTime', event['start'].get('date')))\n",
-    "        end = datetime.datetime.fromisoformat(event['end'].get('dateTime', event['end'].get('date')))\n",
-    "        duration = (end - start).total_seconds() / 3600  # Convert to hours\n",
-    "        total_study_time += duration\n",
-    "\n",
-    "    print(f\"Total study time: {total_study_time} hours\")\n",
-    "    # Add more stats as needed\n",
-    "\n",
-    "def create_study_plan(service, subjects, calendar_id='primary'):\n",
-    "    \"\"\"\n",
-    "    Create a study plan based on subjects and available time slots.\n",
-    "    \"\"\"\n",
-    "    # Placeholder for logic to create a study plan.\n",
-    "    # You need to define how to find gaps and allocate subjects based on weights.\n",
-    "    print(\"Creating study plan...\")\n",
-    "    # Implement your logic here\n"
+    "calendar_id = \"0ca09266015f691eebe0d00c6f3ed7a784713e0160a694b8f7929add00cb1aa1@group.calendar.google.com\""
    ]
   },
   {
@@ -93,26 +147,62 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'credentials.json'",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching past month events\n",
+      "2024-03-02T09:30:00Z epq\n",
+      "2024-03-03T09:00:00Z epq\n",
+      "2024-03-03T09:45:00Z end of week revision maths\n",
+      "2024-03-03T10:15:00Z end of week revision physics\n",
+      "2024-03-03T10:45:00Z end of week revision comp sci\n",
+      "2024-03-05T16:00:00Z epq\n",
+      "2024-03-12T16:00:00Z epq\n",
+      "2024-03-14T10:30:00Z epq\n",
+      "2024-03-26T16:00:00Z epq\n",
+      "2024-04-02T13:00:00Z maths\n",
+      "2024-04-03T09:00:00Z Maths\n",
+      "2024-04-03T09:25:00Z Maths\n",
+      "2024-04-03T09:50:00Z Maths\n",
+      "2024-04-03T10:15:00Z Maths\n",
+      "2024-04-03T10:40:00Z Maths\n",
+      "2024-04-03T11:05:00Z Maths\n",
+      "2024-04-03T11:30:00Z Maths\n",
+      "2024-04-03T12:45:00Z maths\n",
+      "2024-04-03T14:44:03Z Maths\n",
+      "Total study time: 10.916666666666668 hours\n",
+      "Deleted overlapping event: Maths from 2024-04-03T14:44:03Z to 2024-04-03T15:04:03Z.\n",
+      "Deleted overlapping event: Physics from 2024-04-03T15:09:03Z to 2024-04-03T15:22:23Z.\n",
+      "Deleted overlapping event: Computer Science from 2024-04-03T15:27:23Z to 2024-04-03T15:34:03Z.\n",
+      "Added Maths study block from 2024-04-03 14:50:43.507582+00:00 to 2024-04-03 15:10:43.507582+00:00.\n",
+      "Added Physics study block from 2024-04-03 15:15:43.507582+00:00 to 2024-04-03 15:29:03.507582+00:00.\n",
+      "Added Computer Science study block from 2024-04-03 15:34:03.507582+00:00 to 2024-04-03 15:40:43.507582+00:00.\n",
+      "Added Maths study block from 2024-04-03 15:45:43.507582+00:00 to 2024-04-03 16:05:43.507582+00:00.\n",
+      "Added Physics study block from 2024-04-03 16:10:43.507582+00:00 to 2024-04-03 16:24:03.507582+00:00.\n",
+      "Added Computer Science study block from 2024-04-03 16:29:03.507582+00:00 to 2024-04-03 16:35:43.507582+00:00.\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m service \u001b[38;5;241m=\u001b[39m \u001b[43mauthenticate_google_calendar\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m events \u001b[38;5;241m=\u001b[39m fetch_study_events(service, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0ca09266015f691eebe0d00c6f3ed7a784713e0160a694b8f7929add00cb1aa1@group.calendar.google.com\u001b[39m\u001b[38;5;124m'\u001b[39m)  \u001b[38;5;66;03m# Specify your calendar ID for \"studying\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m calculate_study_stats(events)\n",
-      "Cell \u001b[1;32mIn[3], line 26\u001b[0m, in \u001b[0;36mauthenticate_google_calendar\u001b[1;34m()\u001b[0m\n\u001b[0;32m     24\u001b[0m     creds\u001b[38;5;241m.\u001b[39mrefresh(Request())\n\u001b[0;32m     25\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 26\u001b[0m     flow \u001b[38;5;241m=\u001b[39m \u001b[43mInstalledAppFlow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_client_secrets_file\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     27\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcredentials.json\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mSCOPES\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     28\u001b[0m     creds \u001b[38;5;241m=\u001b[39m flow\u001b[38;5;241m.\u001b[39mrun_local_server(port\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     29\u001b[0m \u001b[38;5;66;03m# Save the credentials for the next run\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\Bill\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\google_auth_oauthlib\\flow.py:198\u001b[0m, in \u001b[0;36mFlow.from_client_secrets_file\u001b[1;34m(cls, client_secrets_file, scopes, **kwargs)\u001b[0m\n\u001b[0;32m    183\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[0;32m    184\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfrom_client_secrets_file\u001b[39m(\u001b[38;5;28mcls\u001b[39m, client_secrets_file, scopes, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m    185\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Creates a :class:`Flow` instance from a Google client secrets file.\u001b[39;00m\n\u001b[0;32m    186\u001b[0m \n\u001b[0;32m    187\u001b[0m \u001b[38;5;124;03m    Args:\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    196\u001b[0m \u001b[38;5;124;03m        Flow: The constructed Flow instance.\u001b[39;00m\n\u001b[0;32m    197\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 198\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mclient_secrets_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m json_file:\n\u001b[0;32m    199\u001b[0m         client_config \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(json_file)\n\u001b[0;32m    201\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39mfrom_client_config(client_config, scopes\u001b[38;5;241m=\u001b[39mscopes, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'credentials.json'"
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m study_stats(events)\n\u001b[0;32m      5\u001b[0m subjects \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMaths\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m3\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPhysics\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m2\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mComputer Science\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1\u001b[39m}  \u001b[38;5;66;03m# Example subjects with weights\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[43mcreate_study_plan\u001b[49m\u001b[43m(\u001b[49m\u001b[43mservice\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubjects\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcalendar_id\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Specify your calendar ID\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[2], line 85\u001b[0m, in \u001b[0;36mcreate_study_plan\u001b[1;34m(service, subjects, calendar_id)\u001b[0m\n\u001b[0;32m     82\u001b[0m \u001b[38;5;66;03m# Delete overlapping events in the study plan\u001b[39;00m\n\u001b[0;32m     83\u001b[0m delete_overlapping_events(start_time, end_time)\n\u001b[1;32m---> 85\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m start_time \u001b[38;5;241m<\u001b[39m end_time:\n\u001b[0;32m     86\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m lunch_start \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m start_time \u001b[38;5;241m<\u001b[39m lunch_end:\n\u001b[0;32m     87\u001b[0m         start_time \u001b[38;5;241m=\u001b[39m lunch_end  \u001b[38;5;66;03m# Skip lunch hour\u001b[39;00m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "\n",
     "service = authenticate_google_calendar()\n",
-    "events = fetch_study_events(service, '0ca09266015f691eebe0d00c6f3ed7a784713e0160a694b8f7929add00cb1aa1@group.calendar.google.com')  # Specify your calendar ID for \"studying\"\n",
-    "calculate_study_stats(events)\n",
-    "subjects = {'Math': 2, 'Physics': 3, 'Chemistry': 1}  # Example subjects with weights\n",
-    "create_study_plan(service, subjects, 'studying')  # Specify your calendar ID\n"
+    "events = fetch_study_events(service, calendar_id)  # Specify your calendar ID for \"studying\"\n",
+    "study_stats(events)\n",
+    "\n",
+    "subjects = {'Maths': 3, 'Physics': 2, 'Computer Science': 1}  # Example subjects with weights\n",
+    "create_study_plan(service, subjects, calendar_id)  # Specify your calendar ID\n"
    ]
   }
  ],
