--- a/studying.ipynb
+++ b/studying.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import datetime\n",
+    "dt = datetime.datetime\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def fetch_study_events(service, calendar_id=\"primary\"):\n",
-    "    now = datetime.datetime.utcnow().isoformat() + \"Z\"  # 'Z' indicates UTC time\n",
+    "    now = dt.utcnow().isoformat() + \"Z\"  # 'Z' indicates UTC time\n",
     "    # Calculate the start of the month\n",
     "    start_of_month = (\n",
-    "        datetime.datetime.utcnow().replace(day=1) - datetime.timedelta(days=1)\n",
+    "        dt.utcnow().replace(day=1) - datetime.timedelta(days=1)\n",
     "    ).replace(day=1).isoformat() + \"Z\"\n",
     "    print(\"Fetching past month events\")\n",
     "    events_result = (\n",
@@ -52,16 +61,15 @@
     "def study_stats(events):\n",
     "    total_study_time = 0\n",
     "    for event in events:\n",
-    "        start = datetime.datetime.fromisoformat(\n",
+    "        start = dt.fromisoformat(\n",
     "            event[\"start\"].get(\"dateTime\", event[\"start\"].get(\"date\"))\n",
     "        )\n",
-    "        end = datetime.datetime.fromisoformat(\n",
+    "        end = dt.fromisoformat(\n",
     "            event[\"end\"].get(\"dateTime\", event[\"end\"].get(\"date\"))\n",
     "        )\n",
     "        duration = (end - start).total_seconds() / 3600  # Convert to hours\n",
     "        total_study_time += duration\n",
     "    print(f\"Total study time: {total_study_time} hours\")\n",
-    "\n",
     "\n",
     "def create_study_plan(service, subjects, calendar_id=\"primary\"):\n",
     "    \n",
@@ -81,19 +89,19 @@
     "                service.events().delete(calendarId=calendar_id, eventId=event['id']).execute()\n",
     "                print(f\"Deleted overlapping event: {event['summary']} from {event['start']['dateTime']} to {event['end']['dateTime']}.\")\n",
     "\n",
-    "    now = datetime.datetime.now(datetime.timezone.utc)\n",
+    "    now = dt.now(datetime.timezone.utc)\n",
     "    current_date = now.date()\n",
     "    study_dates = [current_date, current_date + datetime.timedelta(days=1)]\n",
     "    total_weight = sum(subjects.values())\n",
     "\n",
     "    for study_date in study_dates:\n",
     "        if study_date == current_date and now.time() > datetime.time(9, 0):\n",
-    "            start_time = max(now, datetime.datetime.combine(study_date, datetime.time(9, 0), tzinfo=datetime.timezone.utc))\n",
+    "            start_time = max(now, dt.combine(study_date, datetime.time(9, 0), tzinfo=datetime.timezone.utc))\n",
     "        else:\n",
-    "            start_time = datetime.datetime.combine(study_date, datetime.time(9, 0), tzinfo=datetime.timezone.utc)\n",
+    "            start_time = dt.combine(study_date, datetime.time(9, 0), tzinfo=datetime.timezone.utc)\n",
     "\n",
-    "        end_time = datetime.datetime.combine(study_date, datetime.time(17, 0), tzinfo=datetime.timezone.utc)\n",
-    "        lunch_start = datetime.datetime.combine(study_date, datetime.time(12, 0), tzinfo=datetime.timezone.utc)\n",
+    "        end_time = dt.combine(study_date, datetime.time(17, 0), tzinfo=datetime.timezone.utc)\n",
+    "        lunch_start = dt.combine(study_date, datetime.time(12, 0), tzinfo=datetime.timezone.utc)\n",
     "        lunch_end = lunch_start + datetime.timedelta(hours=1)\n",
     "\n",
     "        # Delete overlapping events in the study plan\n",
@@ -105,15 +113,23 @@
     "                continue\n",
     "\n",
     "            for subject, weight in subjects.items():\n",
-    "                study_duration = datetime.timedelta(minutes=40 * weight / total_weight)\n",
-    "                gap_duration = datetime.timedelta(minutes=5)\n",
+    "                study_duration = datetime.timedelta(minutes=40)\n",
+    "                if (end_time - start_time).total_seconds() < 40 * 60:\n",
+    "                    break  # Skip to the next subject if there isn't enough time for a 40-minute block\n",
+    "\n",
+    "                block_weight = int((end_time - start_time).total_seconds() / (40 * 60) * weight / total_weight)\n",
+    "                if block_weight == 0:\n",
+    "                    continue\n",
+    "\n",
+    "                study_duration = datetime.timedelta(minutes=40 * block_weight)\n",
     "\n",
     "                event_end = start_time + study_duration\n",
     "                if event_end > end_time or (lunch_start <= event_end < lunch_end):\n",
     "                    break  # Skip to the next subject if the event would end outside of study hours or during lunch\n",
     "\n",
     "                event = {\n",
-    "                    \"summary\": subject,\n",
+    "                    \"summary\": f\"{subject}\",\n",
+    "                    \"description\": \"Study block generated by study planner - Bill Rimell.\",\n",
     "                    \"start\": {\n",
     "                        \"dateTime\": start_time.isoformat(),\n",
     "                        \"timeZone\": \"UTC\",\n",
@@ -126,7 +142,7 @@
     "                service.events().insert(calendarId=calendar_id, body=event).execute()\n",
     "                print(f\"Added {subject} study block from {start_time} to {event_end}.\")\n",
     "\n",
-    "                start_time = event_end + gap_duration  # Next event starts after a gap\n",
+    "                start_time = event_end + datetime.timedelta(minutes=5)  # Next event starts after a gap\n",
     "\n",
     "            if start_time >= end_time:\n",
     "                break  # If the day's study time is over, exit the loop"
@@ -134,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -161,25 +177,9 @@
       "2024-03-14T10:30:00Z epq\n",
       "2024-03-26T16:00:00Z epq\n",
       "2024-04-02T13:00:00Z maths\n",
-      "2024-04-03T09:00:00Z Maths\n",
-      "2024-04-03T09:25:00Z Maths\n",
-      "2024-04-03T09:50:00Z Maths\n",
-      "2024-04-03T10:15:00Z Maths\n",
-      "2024-04-03T10:40:00Z Maths\n",
-      "2024-04-03T11:05:00Z Maths\n",
-      "2024-04-03T11:30:00Z Maths\n",
-      "2024-04-03T12:45:00Z maths\n",
-      "2024-04-03T14:44:03Z Maths\n",
-      "Total study time: 10.916666666666668 hours\n",
-      "Deleted overlapping event: Maths from 2024-04-03T14:44:03Z to 2024-04-03T15:04:03Z.\n",
-      "Deleted overlapping event: Physics from 2024-04-03T15:09:03Z to 2024-04-03T15:22:23Z.\n",
-      "Deleted overlapping event: Computer Science from 2024-04-03T15:27:23Z to 2024-04-03T15:34:03Z.\n",
-      "Added Maths study block from 2024-04-03 14:50:43.507582+00:00 to 2024-04-03 15:10:43.507582+00:00.\n",
-      "Added Physics study block from 2024-04-03 15:15:43.507582+00:00 to 2024-04-03 15:29:03.507582+00:00.\n",
-      "Added Computer Science study block from 2024-04-03 15:34:03.507582+00:00 to 2024-04-03 15:40:43.507582+00:00.\n",
-      "Added Maths study block from 2024-04-03 15:45:43.507582+00:00 to 2024-04-03 16:05:43.507582+00:00.\n",
-      "Added Physics study block from 2024-04-03 16:10:43.507582+00:00 to 2024-04-03 16:24:03.507582+00:00.\n",
-      "Added Computer Science study block from 2024-04-03 16:29:03.507582+00:00 to 2024-04-03 16:35:43.507582+00:00.\n"
+      "2024-04-03T12:45:00Z Maths\n",
+      "Total study time: 8.25 hours\n",
+      "Added Maths study block from 2024-04-03 15:02:21.597764+00:00 to 2024-04-03 15:42:21.597764+00:00.\n"
      ]
     },
     {
@@ -189,8 +189,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m study_stats(events)\n\u001b[0;32m      5\u001b[0m subjects \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMaths\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m3\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPhysics\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m2\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mComputer Science\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1\u001b[39m}  \u001b[38;5;66;03m# Example subjects with weights\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[43mcreate_study_plan\u001b[49m\u001b[43m(\u001b[49m\u001b[43mservice\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubjects\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcalendar_id\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Specify your calendar ID\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[2], line 85\u001b[0m, in \u001b[0;36mcreate_study_plan\u001b[1;34m(service, subjects, calendar_id)\u001b[0m\n\u001b[0;32m     82\u001b[0m \u001b[38;5;66;03m# Delete overlapping events in the study plan\u001b[39;00m\n\u001b[0;32m     83\u001b[0m delete_overlapping_events(start_time, end_time)\n\u001b[1;32m---> 85\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m start_time \u001b[38;5;241m<\u001b[39m end_time:\n\u001b[0;32m     86\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m lunch_start \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m start_time \u001b[38;5;241m<\u001b[39m lunch_end:\n\u001b[0;32m     87\u001b[0m         start_time \u001b[38;5;241m=\u001b[39m lunch_end  \u001b[38;5;66;03m# Skip lunch hour\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[18], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m study_stats(events)\n\u001b[0;32m      5\u001b[0m subjects \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMaths\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m3\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPhysics\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m2\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mComputer Science\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1\u001b[39m}  \u001b[38;5;66;03m# Example subjects with weights\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[43mcreate_study_plan\u001b[49m\u001b[43m(\u001b[49m\u001b[43mservice\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubjects\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcalendar_id\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Specify your calendar ID\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[16], line 92\u001b[0m, in \u001b[0;36mcreate_study_plan\u001b[1;34m(service, subjects, calendar_id)\u001b[0m\n\u001b[0;32m     89\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (end_time \u001b[38;5;241m-\u001b[39m start_time)\u001b[38;5;241m.\u001b[39mtotal_seconds() \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m40\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m60\u001b[39m:\n\u001b[0;32m     90\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m  \u001b[38;5;66;03m# Skip to the next subject if there isn't enough time for a 40-minute block\u001b[39;00m\n\u001b[1;32m---> 92\u001b[0m block_weight \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mend_time\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mstart_time\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtotal_seconds\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m40\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m60\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mweight\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mtotal_weight\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     93\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m block_weight \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m     94\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
