--- a/studying.ipynb
+++ b/studying.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,26 +11,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datetime\n",
-    "dt = datetime.datetime\n"
+    "import datetime as dt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "def fetch_study_events(service, calendar_id=\"primary\"):\n",
-    "    now = dt.utcnow().isoformat() + \"Z\"  # 'Z' indicates UTC time\n",
+    "    now = dt.datetime.utcnow().isoformat() + \"Z\"  # 'Z' indicates UTC time\n",
     "    # Calculate the start of the month\n",
     "    start_of_month = (\n",
-    "        dt.utcnow().replace(day=1) - datetime.timedelta(days=1)\n",
+    "        dt.datetime.utcnow().replace(day=1) - datetime.timedelta(days=1)\n",
     "    ).replace(day=1).isoformat() + \"Z\"\n",
     "    print(\"Fetching past month events\")\n",
     "    events_result = (\n",
@@ -61,17 +60,30 @@
     "def study_stats(events):\n",
     "    total_study_time = 0\n",
     "    for event in events:\n",
-    "        start = dt.fromisoformat(\n",
+    "        start = dt.datetime.fromisoformat(\n",
     "            event[\"start\"].get(\"dateTime\", event[\"start\"].get(\"date\"))\n",
     "        )\n",
-    "        end = dt.fromisoformat(\n",
+    "        end = dt.datetime.fromisoformat(\n",
     "            event[\"end\"].get(\"dateTime\", event[\"end\"].get(\"date\"))\n",
     "        )\n",
     "        duration = (end - start).total_seconds() / 3600  # Convert to hours\n",
     "        total_study_time += duration\n",
     "    print(f\"Total study time: {total_study_time} hours\")\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime as dt\n",
     "\n",
     "def create_study_plan(service, subjects, calendar_id=\"primary\"):\n",
+    "    \n",
+    "    START_TIME = dt.time(9, 0)\n",
+    "    END_TIME = dt.time(18, 30)\n",
     "    \n",
     "    def delete_overlapping_events(start_time, end_time):\n",
     "        \"\"\"Deletes events in the study plan that overlap with the given time range.\"\"\"\n",
@@ -89,43 +101,62 @@
     "                service.events().delete(calendarId=calendar_id, eventId=event['id']).execute()\n",
     "                print(f\"Deleted overlapping event: {event['summary']} from {event['start']['dateTime']} to {event['end']['dateTime']}.\")\n",
     "\n",
-    "    now = dt.now(datetime.timezone.utc)\n",
+    "    now = dt.datetime.now(dt.timezone.utc)\n",
     "    current_date = now.date()\n",
-    "    study_dates = [current_date, current_date + datetime.timedelta(days=1)]\n",
+    "    num_days = 3  # Number of days to generate study plan for\n",
+    "    study_dates = [current_date + dt.timedelta(days=i) for i in range(num_days)]\n",
+    "    \n",
     "    total_weight = sum(subjects.values())\n",
     "\n",
     "    for study_date in study_dates:\n",
-    "        if study_date == current_date and now.time() > datetime.time(9, 0):\n",
-    "            start_time = max(now, dt.combine(study_date, datetime.time(9, 0), tzinfo=datetime.timezone.utc))\n",
+    "        if study_date == current_date and now.time() > START_TIME:\n",
+    "            start_time = max(now, dt.datetime.combine(study_date, START_TIME, tzinfo=dt.timezone.utc))\n",
     "        else:\n",
-    "            start_time = dt.combine(study_date, datetime.time(9, 0), tzinfo=datetime.timezone.utc)\n",
+    "            start_time = dt.datetime.combine(study_date, START_TIME, tzinfo=dt.timezone.utc)\n",
     "\n",
-    "        end_time = dt.combine(study_date, datetime.time(17, 0), tzinfo=datetime.timezone.utc)\n",
-    "        lunch_start = dt.combine(study_date, datetime.time(12, 0), tzinfo=datetime.timezone.utc)\n",
-    "        lunch_end = lunch_start + datetime.timedelta(hours=1)\n",
+    "        end_time = dt.datetime.combine(study_date, END_TIME, tzinfo=dt.timezone.utc)\n",
+    "        lunch_start = dt.datetime.combine(study_date, dt.time(12, 00), tzinfo=dt.timezone.utc)\n",
+    "        lunch_end = lunch_start + dt.timedelta(hours=1)\n",
     "\n",
     "        # Delete overlapping events in the study plan\n",
     "        delete_overlapping_events(start_time, end_time)\n",
     "\n",
-    "        while start_time < end_time:\n",
-    "            if lunch_start <= start_time < lunch_end:\n",
-    "                start_time = lunch_end  # Skip lunch hour\n",
-    "                continue\n",
+    "        time_available = end_time - max(start_time, now)  # Calculate available study time\n",
     "\n",
-    "            for subject, weight in subjects.items():\n",
-    "                study_duration = datetime.timedelta(minutes=40)\n",
-    "                if (end_time - start_time).total_seconds() < 40 * 60:\n",
-    "                    break  # Skip to the next subject if there isn't enough time for a 40-minute block\n",
+    "        num_blocks_available = int((time_available.total_seconds() / 60) / 45)  # Number of 40-minute blocks available + 5-minute break\n",
     "\n",
-    "                block_weight = int((end_time - start_time).total_seconds() / (40 * 60) * weight / total_weight)\n",
-    "                if block_weight == 0:\n",
+    "        print(f\"Total available blocks: {num_blocks_available}\")\n",
+    "\n",
+    "        # Check if lunch is still left in the day\n",
+    "        if lunch_start > now:\n",
+    "            num_blocks_available -= 1\n",
+    "\n",
+    "        subject_blocks = {subject: int(weight / total_weight * num_blocks_available) for subject, weight in subjects.items()}\n",
+    "        \n",
+    "        remaining_blocks = num_blocks_available - sum(subject_blocks.values())\n",
+    "        \n",
+    "        if remaining_blocks > 0:\n",
+    "            # Add remaining blocks to the subject with the highest weight\n",
+    "            max_weight_subject = max(subjects, key=subjects.get)\n",
+    "            subject_blocks[max_weight_subject] += remaining_blocks\n",
+    "\n",
+    "        print(\"Number of blocks per subject:\")\n",
+    "        for subject, blocks in subject_blocks.items():\n",
+    "            print(f\"{subject}: {blocks} blocks\")\n",
+    "        \n",
+    "        for subject, blocks in subject_blocks.items():\n",
+    "            for _ in range(blocks):\n",
+    "                if start_time >= end_time:\n",
+    "                    break\n",
+    "                \n",
+    "                # Skip inserting block during lunch hour\n",
+    "                if lunch_start <= start_time < lunch_end:\n",
+    "                    start_time = lunch_end\n",
     "                    continue\n",
-    "\n",
-    "                study_duration = datetime.timedelta(minutes=40 * block_weight)\n",
-    "\n",
-    "                event_end = start_time + study_duration\n",
-    "                if event_end > end_time or (lunch_start <= event_end < lunch_end):\n",
-    "                    break  # Skip to the next subject if the event would end outside of study hours or during lunch\n",
+    "                \n",
+    "                event_end = start_time + dt.timedelta(minutes=40)\n",
+    "                if event_end > end_time:\n",
+    "                    break\n",
     "\n",
     "                event = {\n",
     "                    \"summary\": f\"{subject}\",\n",
@@ -142,15 +173,30 @@
     "                service.events().insert(calendarId=calendar_id, body=event).execute()\n",
     "                print(f\"Added {subject} study block from {start_time} to {event_end}.\")\n",
     "\n",
-    "                start_time = event_end + datetime.timedelta(minutes=5)  # Next event starts after a gap\n",
-    "\n",
-    "            if start_time >= end_time:\n",
-    "                break  # If the day's study time is over, exit the loop"
+    "                start_time = event_end + dt.timedelta(minutes=5)  # Next event starts after a gap\n",
+    "        \n",
+    "        # Add lunch block if it's not already added and lunch time is within the available study time\n",
+    "        if lunch_start < end_time and lunch_end > start_time:\n",
+    "            lunch_end = min(lunch_end, end_time)\n",
+    "            lunch_event = {\n",
+    "                \"summary\": \"Lunch\",\n",
+    "                \"description\": \"Lunch break generated by study planner - Bill Rimell.\",\n",
+    "                \"start\": {\n",
+    "                    \"dateTime\": lunch_start.isoformat(),\n",
+    "                    \"timeZone\": \"UTC\",\n",
+    "                },\n",
+    "                \"end\": {\n",
+    "                    \"dateTime\": lunch_end.isoformat(),\n",
+    "                    \"timeZone\": \"UTC\",\n",
+    "                },\n",
+    "            }\n",
+    "            service.events().insert(calendarId=calendar_id, body=lunch_event).execute()\n",
+    "            print(f\"Added lunch break from {lunch_start} to {lunch_end}.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -178,20 +224,8 @@
       "2024-03-26T16:00:00Z epq\n",
       "2024-04-02T13:00:00Z maths\n",
       "2024-04-03T12:45:00Z Maths\n",
-      "Total study time: 8.25 hours\n",
-      "Added Maths study block from 2024-04-03 15:02:21.597764+00:00 to 2024-04-03 15:42:21.597764+00:00.\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m study_stats(events)\n\u001b[0;32m      5\u001b[0m subjects \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMaths\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m3\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPhysics\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m2\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mComputer Science\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1\u001b[39m}  \u001b[38;5;66;03m# Example subjects with weights\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[43mcreate_study_plan\u001b[49m\u001b[43m(\u001b[49m\u001b[43mservice\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubjects\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcalendar_id\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Specify your calendar ID\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[16], line 92\u001b[0m, in \u001b[0;36mcreate_study_plan\u001b[1;34m(service, subjects, calendar_id)\u001b[0m\n\u001b[0;32m     89\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (end_time \u001b[38;5;241m-\u001b[39m start_time)\u001b[38;5;241m.\u001b[39mtotal_seconds() \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m40\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m60\u001b[39m:\n\u001b[0;32m     90\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m  \u001b[38;5;66;03m# Skip to the next subject if there isn't enough time for a 40-minute block\u001b[39;00m\n\u001b[1;32m---> 92\u001b[0m block_weight \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mend_time\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mstart_time\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtotal_seconds\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m40\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m60\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mweight\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mtotal_weight\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     93\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m block_weight \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m     94\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "2024-04-03T15:35:43Z Maths\n",
+      "Total study time: 8.916666666666666 hours\n"
      ]
     }
    ],
@@ -199,9 +233,79 @@
     "\n",
     "service = authenticate_google_calendar()\n",
     "events = fetch_study_events(service, calendar_id)  # Specify your calendar ID for \"studying\"\n",
-    "study_stats(events)\n",
+    "study_stats(events)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted overlapping event: Maths from 2024-04-03T15:35:43Z to 2024-04-03T16:15:43Z.\n",
+      "Total available blocks: 3\n",
+      "Number of blocks per subject:\n",
+      "Maths: 3 blocks\n",
+      "Physics: 0 blocks\n",
+      "Computer Science: 0 blocks\n",
+      "Added Maths study block from 2024-04-03 15:37:55.045305+00:00 to 2024-04-03 16:17:55.045305+00:00.\n",
+      "Added Maths study block from 2024-04-03 16:22:55.045305+00:00 to 2024-04-03 17:02:55.045305+00:00.\n",
+      "Added Maths study block from 2024-04-03 17:07:55.045305+00:00 to 2024-04-03 17:47:55.045305+00:00.\n",
+      "Deleted overlapping event: Maths from 2024-04-04T09:00:00Z to 2024-04-04T09:40:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-04T09:45:00Z to 2024-04-04T10:25:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-04T10:30:00Z to 2024-04-04T11:10:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-04T11:15:00Z to 2024-04-04T11:55:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-04T13:00:00Z to 2024-04-04T13:40:00Z.\n",
+      "Deleted overlapping event: Physics from 2024-04-04T13:45:00Z to 2024-04-04T14:25:00Z.\n",
+      "Deleted overlapping event: Physics from 2024-04-04T14:30:00Z to 2024-04-04T15:10:00Z.\n",
+      "Deleted overlapping event: Computer Science from 2024-04-04T15:15:00Z to 2024-04-04T15:55:00Z.\n",
+      "Total available blocks: 12\n",
+      "Number of blocks per subject:\n",
+      "Maths: 6 blocks\n",
+      "Physics: 3 blocks\n",
+      "Computer Science: 2 blocks\n",
+      "Added Maths study block from 2024-04-04 09:00:00+00:00 to 2024-04-04 09:40:00+00:00.\n",
+      "Added Maths study block from 2024-04-04 09:45:00+00:00 to 2024-04-04 10:25:00+00:00.\n",
+      "Added Maths study block from 2024-04-04 10:30:00+00:00 to 2024-04-04 11:10:00+00:00.\n",
+      "Added Maths study block from 2024-04-04 11:15:00+00:00 to 2024-04-04 11:55:00+00:00.\n",
+      "Added Maths study block from 2024-04-04 13:00:00+00:00 to 2024-04-04 13:40:00+00:00.\n",
+      "Added Physics study block from 2024-04-04 13:45:00+00:00 to 2024-04-04 14:25:00+00:00.\n",
+      "Added Physics study block from 2024-04-04 14:30:00+00:00 to 2024-04-04 15:10:00+00:00.\n",
+      "Added Physics study block from 2024-04-04 15:15:00+00:00 to 2024-04-04 15:55:00+00:00.\n",
+      "Added Computer Science study block from 2024-04-04 16:00:00+00:00 to 2024-04-04 16:40:00+00:00.\n",
+      "Added Computer Science study block from 2024-04-04 16:45:00+00:00 to 2024-04-04 17:25:00+00:00.\n",
+      "Deleted overlapping event: Maths from 2024-04-05T09:00:00Z to 2024-04-05T09:40:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-05T09:45:00Z to 2024-04-05T10:25:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-05T10:30:00Z to 2024-04-05T11:10:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-05T11:15:00Z to 2024-04-05T11:55:00Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-05T13:00:00Z to 2024-04-05T13:40:00Z.\n",
+      "Deleted overlapping event: Physics from 2024-04-05T13:45:00Z to 2024-04-05T14:25:00Z.\n",
+      "Deleted overlapping event: Physics from 2024-04-05T14:30:00Z to 2024-04-05T15:10:00Z.\n",
+      "Deleted overlapping event: Computer Science from 2024-04-05T15:15:00Z to 2024-04-05T15:55:00Z.\n",
+      "Total available blocks: 12\n",
+      "Number of blocks per subject:\n",
+      "Maths: 6 blocks\n",
+      "Physics: 3 blocks\n",
+      "Computer Science: 2 blocks\n",
+      "Added Maths study block from 2024-04-05 09:00:00+00:00 to 2024-04-05 09:40:00+00:00.\n",
+      "Added Maths study block from 2024-04-05 09:45:00+00:00 to 2024-04-05 10:25:00+00:00.\n",
+      "Added Maths study block from 2024-04-05 10:30:00+00:00 to 2024-04-05 11:10:00+00:00.\n",
+      "Added Maths study block from 2024-04-05 11:15:00+00:00 to 2024-04-05 11:55:00+00:00.\n",
+      "Added Maths study block from 2024-04-05 13:00:00+00:00 to 2024-04-05 13:40:00+00:00.\n",
+      "Added Physics study block from 2024-04-05 13:45:00+00:00 to 2024-04-05 14:25:00+00:00.\n",
+      "Added Physics study block from 2024-04-05 14:30:00+00:00 to 2024-04-05 15:10:00+00:00.\n",
+      "Added Physics study block from 2024-04-05 15:15:00+00:00 to 2024-04-05 15:55:00+00:00.\n",
+      "Added Computer Science study block from 2024-04-05 16:00:00+00:00 to 2024-04-05 16:40:00+00:00.\n",
+      "Added Computer Science study block from 2024-04-05 16:45:00+00:00 to 2024-04-05 17:25:00+00:00.\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
-    "subjects = {'Maths': 3, 'Physics': 2, 'Computer Science': 1}  # Example subjects with weights\n",
+    "subjects = {'Maths': 150, 'Physics': 100, 'Computer Science': 70}  # Example subjects with weights\n",
     "create_study_plan(service, subjects, calendar_id)  # Specify your calendar ID\n"
    ]
   }
