--- a/study_plan.ipynb
+++ b/study_plan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,26 +55,12 @@
     "        print(start, event[\"summary\"])\n",
     "\n",
     "    return events\n",
-    "\n",
-    "\n",
-    "def study_stats(events):\n",
-    "    total_study_time = 0\n",
-    "    for event in events:\n",
-    "        start = dt.datetime.fromisoformat(\n",
-    "            event[\"start\"].get(\"dateTime\", event[\"start\"].get(\"date\"))\n",
-    "        )\n",
-    "        end = dt.datetime.fromisoformat(\n",
-    "            event[\"end\"].get(\"dateTime\", event[\"end\"].get(\"date\"))\n",
-    "        )\n",
-    "        duration = (end - start).total_seconds() / 3600  # Convert to hours\n",
-    "        total_study_time += duration\n",
-    "    print(f\"Total study time: {total_study_time} hours\")\n",
-    "    \n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,55 +191,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fetching past month events\n",
-      "2024-03-02T09:30:00Z epq\n",
-      "2024-03-03T09:00:00Z epq\n",
-      "2024-03-03T09:45:00Z end of week revision maths\n",
-      "2024-03-03T10:15:00Z end of week revision physics\n",
-      "2024-03-03T10:45:00Z end of week revision comp sci\n",
-      "2024-03-05T16:00:00Z epq\n",
-      "2024-03-12T16:00:00Z epq\n",
-      "2024-03-14T10:30:00Z epq\n",
-      "2024-03-26T16:00:00Z epq\n",
-      "2024-04-02T13:00:00Z maths\n",
-      "2024-04-03T12:45:00Z Maths\n",
-      "2024-04-03T15:35:43Z Maths\n",
-      "Total study time: 8.916666666666666 hours\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "service = authenticate_google_calendar()\n",
-    "events = fetch_study_events(service, calendar_id)  # Specify your calendar ID for \"studying\"\n",
-    "study_stats(events)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deleted overlapping event: Maths from 2024-04-03T15:35:43Z to 2024-04-03T16:15:43Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-03T15:45:34Z to 2024-04-03T16:25:34Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-03T16:30:34Z to 2024-04-03T17:10:34Z.\n",
+      "Deleted overlapping event: Maths from 2024-04-03T17:15:34Z to 2024-04-03T17:55:34Z.\n",
       "Total available blocks: 3\n",
       "Number of blocks per subject:\n",
       "Maths: 3 blocks\n",
       "Physics: 0 blocks\n",
       "Computer Science: 0 blocks\n",
-      "Added Maths study block from 2024-04-03 15:37:55.045305+00:00 to 2024-04-03 16:17:55.045305+00:00.\n",
-      "Added Maths study block from 2024-04-03 16:22:55.045305+00:00 to 2024-04-03 17:02:55.045305+00:00.\n",
-      "Added Maths study block from 2024-04-03 17:07:55.045305+00:00 to 2024-04-03 17:47:55.045305+00:00.\n",
+      "Added Maths study block from 2024-04-03 15:51:54.107310+00:00 to 2024-04-03 16:31:54.107310+00:00.\n",
+      "Added Maths study block from 2024-04-03 16:36:54.107310+00:00 to 2024-04-03 17:16:54.107310+00:00.\n",
+      "Added Maths study block from 2024-04-03 17:21:54.107310+00:00 to 2024-04-03 18:01:54.107310+00:00.\n",
       "Deleted overlapping event: Maths from 2024-04-04T09:00:00Z to 2024-04-04T09:40:00Z.\n",
       "Deleted overlapping event: Maths from 2024-04-04T09:45:00Z to 2024-04-04T10:25:00Z.\n",
       "Deleted overlapping event: Maths from 2024-04-04T10:30:00Z to 2024-04-04T11:10:00Z.\n",
@@ -261,7 +216,9 @@
       "Deleted overlapping event: Maths from 2024-04-04T13:00:00Z to 2024-04-04T13:40:00Z.\n",
       "Deleted overlapping event: Physics from 2024-04-04T13:45:00Z to 2024-04-04T14:25:00Z.\n",
       "Deleted overlapping event: Physics from 2024-04-04T14:30:00Z to 2024-04-04T15:10:00Z.\n",
-      "Deleted overlapping event: Computer Science from 2024-04-04T15:15:00Z to 2024-04-04T15:55:00Z.\n",
+      "Deleted overlapping event: Physics from 2024-04-04T15:15:00Z to 2024-04-04T15:55:00Z.\n",
+      "Deleted overlapping event: Computer Science from 2024-04-04T16:00:00Z to 2024-04-04T16:40:00Z.\n",
+      "Deleted overlapping event: Computer Science from 2024-04-04T16:45:00Z to 2024-04-04T17:25:00Z.\n",
       "Total available blocks: 12\n",
       "Number of blocks per subject:\n",
       "Maths: 6 blocks\n",
@@ -284,7 +241,9 @@
       "Deleted overlapping event: Maths from 2024-04-05T13:00:00Z to 2024-04-05T13:40:00Z.\n",
       "Deleted overlapping event: Physics from 2024-04-05T13:45:00Z to 2024-04-05T14:25:00Z.\n",
       "Deleted overlapping event: Physics from 2024-04-05T14:30:00Z to 2024-04-05T15:10:00Z.\n",
-      "Deleted overlapping event: Computer Science from 2024-04-05T15:15:00Z to 2024-04-05T15:55:00Z.\n",
+      "Deleted overlapping event: Physics from 2024-04-05T15:15:00Z to 2024-04-05T15:55:00Z.\n",
+      "Deleted overlapping event: Computer Science from 2024-04-05T16:00:00Z to 2024-04-05T16:40:00Z.\n",
+      "Deleted overlapping event: Computer Science from 2024-04-05T16:45:00Z to 2024-04-05T17:25:00Z.\n",
       "Total available blocks: 12\n",
       "Number of blocks per subject:\n",
       "Maths: 6 blocks\n",
@@ -304,6 +263,7 @@
     }
    ],
    "source": [
+    "service = authenticate_google_calendar()\n",
     "\n",
     "subjects = {'Maths': 150, 'Physics': 100, 'Computer Science': 70}  # Example subjects with weights\n",
     "create_study_plan(service, subjects, calendar_id)  # Specify your calendar ID\n"
